--- a/click-me-button/index.html
+++ b/click-me-button/index.html
@@ -9,7 +9,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>"Click Me" Button</title>
-  <link rel="stylesheet" media="all" href="style.css" />
+  <link rel="stylesheet" media="all" href="..//click-me-button/style.css" />
 </head>
 <body>
 <!-- Inspiration: https://dribbble.com/shots/4397812-Click-Me -->
