--- a/talle2/index.html
+++ b/talle2/index.html
@@ -116,9 +116,13 @@
     <p><b>Lugar: </b> pilares 16 de septiembre</p>
     <p><b>Dirigido:</b> alumnos de preparatoria</p>
     <p><b>Cupos disponibles:</b>   6</p>
-    <button class="btn1">
-        <span>REGISTRARSE</span>
-    </button>
+    <a href="#" class="btnregistrate">
+        <span>Registraste</span>
+        <svg width="13px" height="10px" viewBox="0 0 13 10">
+        <path d="M1,5 L11,5"></path>
+        <polyline points="8 1 12 5 8 9"></polyline>
+        </svg>
+    </a>
 </div>
 </div>
 
