--- a/taller prueba/index.html
+++ b/taller prueba/index.html
@@ -3,18 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../taller prueba/fua.css">
     <title>Document</title>
-    <style>
-        h1{
-            font-size: 38px;
-            text-align: center;
-            color: red;
-        }
-    </style>
 </head>
 <body>
-    <header>
-        <h1>taller</h1>
+    <header class="contenedor">
+        <div class="text">
+            <h1>
+                MATEMATICAS
+            </h1>
+            <P>
+                Las matemáticas nos son indispensables.
+                Describen fenómenos cotidianos y nos ayudan a entender nuestro entorno.
+            </P>
+        </div>
+        <div class="wave" style="height: 150px; overflow: hidden;" ><svg viewBox="0 0 500 150"
+            preserveAspectRatio="none" style="height: 100%; width: 100%;">
+            <path d="M0.00,49.98 C137.97,148.53 366.53,-85.34 500.00,49.98 L500.00,150.00 L0.00,150.00 Z" 
+            style="stroke: none; fill: #08f;"></path></svg></div>
     </header>
 </body>
 </html>
