--- a/taller prueba/index.html
+++ b/taller prueba/index.html
@@ -13,14 +13,14 @@
                 MATEMATICAS
             </h1>
             <P>
-                Las matemáticas nos son indispensables.
+                Las matemáticas nos son indispensables. <br>
                 Describen fenómenos cotidianos y nos ayudan a entender nuestro entorno.
             </P>
         </div>
         <div class="wave" style="height: 150px; overflow: hidden;" ><svg viewBox="0 0 500 150"
             preserveAspectRatio="none" style="height: 100%; width: 100%;">
             <path d="M0.00,49.98 C137.97,148.53 366.53,-85.34 500.00,49.98 L500.00,150.00 L0.00,150.00 Z" 
-            style="stroke: none; fill: #08f;"></path></svg></div>
+            style="stroke: none; fill: #fff;"></path></svg></div>
     </header>
 </body>
 </html>
