--- a/taller prueba/index.html
+++ b/taller prueba/index.html
@@ -22,5 +22,125 @@
             <path d="M0.00,49.98 C137.97,148.53 366.53,-85.34 500.00,49.98 L500.00,150.00 L0.00,150.00 Z" 
             style="stroke: none; fill: #fff;"></path></svg></div>
     </header>
+    <main class="card">
+    <div class="circle" style="--col: #ff0004" >
+        <img src="../talle2/img/simbolo-de-las-matematicas.png" class="logo">
+    </div>
+    <img src="../talle2/img/funcion.png" class="funcion_img">
+    </main>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- PARTE CARD ORIGINAL JAVA -->
+
+    <div class="recursos">
+        <div class="tarjeta">
+            <div class="informa">
+            <img src="https://picsum.photos/id/684/600/400?grayscale" alt="">
+            <h1>{{recurso1}}</h1>
+            <p>{{descripcion1}}</p>
+        </div>
+        </div>
+        <div class="tarjeta">
+            <div class="informa">
+            <img src="https://picsum.photos/id/334/600/400" alt="">
+            <h1>{{recurso2}}</h1>
+            <p>{{descripcion2}}</p>
+            </div>
+        </div>
+        <div class="tarjeta">
+            <div class="informa">
+        <img src="https://picsum.photos/id/514/600/400" alt="">
+        <h1>{{recurso3}}</h1>
+        <p>{{descripcion3}}</p>
+            </div>
+        </div>
+        <div class="tarjeta">
+            <div class="informa">
+        <img src="https://picsum.photos/id/670/600/400" alt="">
+        <h1>{{recurso4}}</h1>
+        <p>{{descripcion4}}</p>
+            </div>
+        </div>
+        <div class="tarjeta">
+            <div class="informa">
+        <img src="https://picsum.photos/id/191/600/400" alt="">
+        <h1>{{recurso5}}</h1>
+        <p>{{descripcion5}}</p>
+            </div>
+        </div>
+        <div class="tarjeta">
+            <div class="informa">
+        <img src="https://picsum.photos/id/235/600/400" alt="">
+        <h1>{{recurso6}}</h1>
+        <p>{{descripcion6}}</p>
+            </div>
+        </div>
+        <div class="tarjeta">
+            <div class="informa">
+            <img src="https://picsum.photos/id/684/600/400?grayscale" alt="">
+            <h1>{{recurso1}}</h1>
+            <p>{{descripcion1}}</p>
+        </div>
+        </div>
+        <div class="tarjeta">
+            <div class="informa">
+            <img src="https://picsum.photos/id/334/600/400" alt="">
+            <h1>{{recurso2}}</h1>
+            <p>{{descripcion2}}</p>
+            </div>
+        </div>
+        <div class="tarjeta">
+            <div class="informa">
+        <img src="https://picsum.photos/id/514/600/400" alt="">
+        <h1>{{recurso3}}</h1>
+        <p>{{descripcion3}}</p>
+            </div>
+        </div>
+        <div class="tarjeta">
+            <div class="informa">
+        <img src="https://picsum.photos/id/670/600/400" alt="">
+        <h1>{{recurso4}}</h1>
+        <p>{{descripcion4}}</p>
+            </div>
+        </div>
+        <div class="tarjeta">
+            <div class="informa">
+        <img src="https://picsum.photos/id/191/600/400" alt="">
+        <h1>{{recurso5}}</h1>
+        <p>{{descripcion5}}</p>
+            </div>
+        </div>
+        <div class="tarjeta">
+            <div class="informa">
+        <img src="https://picsum.photos/id/235/600/400" alt="">
+        <h1>{{recurso6}}</h1>
+        <p>{{descripcion6}}</p>
+            </div>
+        </div>
+        <script src="main.js"></script>
+        </div>
+    
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
