--- a/talle2/index.html
+++ b/talle2/index.html
@@ -100,6 +100,9 @@
 <div class="inscribete">
 <div class="tallerista">
     <figure>
+        <button><svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" fill="currentColor" class="bi bi-exclamation-lg" viewBox="0 0 16 16">
+            <path d="M7.005 3.1a1 1 0 1 1 1.99 0l-.388 6.35a.61.61 0 0 1-1.214 0L7.005 3.1ZM7 12a1 1 0 1 1 2 0 1 1 0 0 1-2 0Z"/>
+          </svg></button>
     <img src="../talle2/img/4_6_2021 21_02_11.png" alt="">
     <div class="informacion-tallerista">
         <h1>TALLERISTA</h1>
@@ -107,7 +110,7 @@
         Lunes, Martes, Viernes - 10:00 am - 16:30 pm<br>
         joelflores897@gmail.com</P>
     </div>
-    </figure>
+</figure>
 </div>
           <!-- INFORMACION DEL TALLER -->
 <div class="registrate">
