--- a/taller prueba/index.html
+++ b/taller prueba/index.html
@@ -21,12 +21,80 @@
             preserveAspectRatio="none" style="height: 100%; width: 100%;">
             <path d="M0.00,49.98 C137.97,148.53 366.53,-85.34 500.00,49.98 L500.00,150.00 L0.00,150.00 Z" 
             style="stroke: none; fill: #fff;"></path></svg></div>
-    </header>
+        </header>
+
+
+        <!--    foto random, video, inscribete,botom-->
+<div class="prueba">
+    <div class="caja"></div>
+    <div class="caja"></div>
+    <div class="circulo"></div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <!-- informacion -->
+
+
+
     <main class="card">
     <div class="circle" style="--col: #ff0004" >
         <img src="../talle2/img/simbolo-de-las-matematicas.png" class="logo">
     </div>
+    <div class="contenido">
+    <p>>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit nihil,
+        quisquam cupiditate optio adipisci sunt officiis est laboriosam unde 
+        libero magni totam perferendis minus esse quam</p>
+    </div>
     <img src="../talle2/img/funcion.png" class="funcion_img">
     </main>
+
+
+
+
 </body>
 </html>
