--- a/taller prueba/index.html
+++ b/taller prueba/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="contenedor">
-        <div class="text">
+        <div class="text">4
             <h1>
                 MATEMATICAS
             </h1>
@@ -96,5 +96,36 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
+   <!--  FOTOS Y RECUERDOS -->
+
+<div class="fotos">
+    <div class="ti">
+     <h1>Fotos de la clase</h1>
+     <div class="waveleft" style=" overflow: hidden;" >
+    <svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;">
+    <path d="M208.08,0.00 C152.69,67.09 504.79,71.55 200.80,150.00 L0.00,150.00 L0.00,0.00 Z" 
+    style="stroke: none; fill: #08f;"></path></svg></div>
+    </div>
+    <div class="galeria">
+        <img src="https://picsum.photos/id/1025/600/400" alt="">
+            </div>
+</div>
+
 </body>
-</html>
+</html> 
